syntax = "proto3";

package city;

message City {
  string id = 1;
  string cityName = 2;
  string cityCode = 3;
  string estateId = 4;
}

// *********** DTO ***********
message Create {
  string cityName = 1;
  string cityCode = 2;
  string estateId = 3;
}

message Update {
  string id = 1;
  string cityName = 2;
  string cityCode = 3;
  string estateId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string cityName = 2;
  string cityCode = 3;
  string estateId = 4;
}

// *********** One ***********
message One {
  City data = 1;
}

// *********** Many ***********
message Many {
  repeated City data = 1;
}

service CityService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}

