syntax = "proto3";

package country;

message Country {
  string id = 1;
  string countryName = 2;
  string countryCode = 3;
}

// *********** DTO ***********
message Create {
  string countryName = 1;
  string countryCode = 2;
}

message Update {
  string id = 1;
  string countryName = 2;
  string countryCode = 3;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string countryName = 2;
  string countryCode = 3;
}

// *********** One ***********
message One {
  Country data = 1;
}

// *********** Many ***********
message Many {
  repeated Country data = 1;
}

service CountryService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}

