syntax = "proto3";

package company;

message Company {
  string id = 1;
  string companyName = 2;
  string companyIdentification = 3;
  string companyKey = 4;
  string cityId = 5;
  string addressId = 6;
}

// *********** DTO ***********
message Create {
  string companyName = 1;
  string companyIdentification = 2;
  string companyKey = 3;
  string cityId = 4;
  string addressId = 5;
}

message Update {
  string id = 1;
  string companyName = 2;
  string companyIdentification = 3;
  string companyKey = 4;
  string cityId = 5;
  string addressId = 6;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string companyName = 2;
  string companyIdentification = 3;
  string companyKey = 4;
  string cityId = 5;
  string addressId = 6;
}

// *********** One ***********
message One {
  Company data = 1;
}

// *********** Many ***********
message Many {
  repeated Company data = 1;
}

service CompanyService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}