syntax = "proto3";

package office;

message Office {
  string id = 1;
  string officeName = 2;
  string companyId = 3;
  string addressId = 4;
}

// *********** DTO ***********
message Create {
  string officeName = 1;
  string companyId = 2;
  string addressId = 3;
}

message Update {
  string id = 1;
  string officeName = 2;
  string companyId = 3;
  string addressId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string officeName = 2;
  string companyId = 3;
  string addressId = 4;
}

// *********** One ***********
message One {
  Office data = 1;
}

// *********** Many ***********
message Many {
  repeated Office data = 1;
}

service OfficeService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}