syntax = "proto3";

package person;

message Person {
  string id = 1;
  string personIdentification = 2;
  string personFirstName = 3;
  string personSecondName = 4;
  string personFirstSurname = 5;
  string personSecondSurname = 6;
  string personCompanyName = 7;
  string companyId = 8;
  string typePersonId = 9;
  string typeIdentificationId = 10;
}

// *********** DTO ***********
message Create {
  string personIdentification = 1;
  string personFirstName = 2;
  string personSecondName = 3;
  string personFirstSurname = 4;
  string personSecondSurname = 5;
  string personCompanyName = 6;
  string companyId = 7;
  string typePersonId = 8;
  string typeIdentificationId = 9;
}

message Update {
  string id = 1;
  string personIdentification = 2;
  string personFirstName = 3;
  string personSecondName = 4;
  string personFirstSurname = 5;
  string personSecondSurname = 6;
  string personCompanyName = 7;
  string companyId = 8;
  string typePersonId = 9;
  string typeIdentificationId = 10;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string personIdentification = 2;
  string personFirstName = 3;
  string personSecondName = 4;
  string personFirstSurname = 5;
  string personSecondSurname = 6;
  string personCompanyName = 7;
  string companyId = 8;
  string typePersonId = 9;
  string typeIdentificationId = 10;
}

// *********** One ***********
message One {
  Person data = 1;
}

// *********** Many ***********
message Many {
  repeated Person data = 1;
}

service PersonService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}