syntax = "proto3";

package type_identification;

message TypeIdentification {
  string id = 1;
  string typeIdentificationDescription = 2;
  string typeIdentificationCode = 3;
}

// *********** DTO ***********
message Create {
  string typeIdentificationDescription = 1;
  string typeIdentificationCode = 2;
}

message Update {
  string id = 1;
  string typeIdentificationDescription = 2;
  string typeIdentificationCode = 3;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string typeIdentificationDescription = 2;
  string typeIdentificationCode = 3;
}

// *********** One ***********
message One {
  TypeIdentification data = 1;
}

// *********** Many ***********
message Many {
  repeated TypeIdentification data = 1;
}

service TypeIdentificationService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}