syntax = "proto3";

package user_profile;

message UserProfile {
  string id = 1;
  bool userProfileStatus = 2;
  string userId = 3;
  string profileId = 4;
}

// *********** DTO ***********
message Create {
  bool userProfileStatus = 1;
  string userId = 2;
  string profileId = 3;
}

message Update {
  string id = 1;
  bool userProfileStatus = 2;
  string userId = 3;
  string profileId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  bool userProfileStatus = 2;
  string userId = 3;
  string profileId = 4;
}

// *********** One ***********
message One {
  UserProfile data = 1;
}

// *********** Many ***********
message Many {
  repeated UserProfile data = 1;
}

service UserProfileService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}