// Original file: src/protos/1/user.proto


export interface Update {
  'id'?: (string);
  'userName'?: (string);
  'userPassword'?: (string);
  'personId'?: (string);
}

export interface Update__Output {
  'id': (string);
  'userName': (string);
  'userPassword': (string);
  'personId': (string);
}
