// Original file: src/protos/1/user.proto


export interface Search {
  'id'?: (string);
  'userName'?: (string);
  'userPassword'?: (string);
  'personId'?: (string);
}

export interface Search__Output {
  'id': (string);
  'userName': (string);
  'userPassword': (string);
  'personId': (string);
}
