export * from './grpc';
export * from './utils';

export * as grpcType1 from './modules/1';
export * as authGrpcService from './modules/1/auth/AuthService';
export * as userGrpcService from './modules/1/user/UserService';

export * as grpcType3 from './modules/3';
export * as addressGrpcService from './modules/3/address/AddressService';
export * as cityGrpcService from './modules/3/city/CityService';
export * as countryGrpcService from './modules/3/country/CountryService';
export * as estateGrpcService from './modules/3/estate/EstateService';

export * as grpcType4 from './modules/4';
export * as companyGrpcService from './modules/4/company/CompanyService';
export * as officeGrpcService from './modules/4/office/OfficeService';

export * as grpcType5 from './modules/5';
export * as personGrpcService from './modules/5/person/PersonService';
export * as typeIdentificationGrpcService from './modules/5/type_identification/TypeIdentificationService';
export * as typePesonGrpcService from './modules/5/type_person/TypePersonService';

export * as grpcType6 from './modules/6';
export * as menuGrpcService from './modules/6/menu/MenuService';
export * as profileGrpcService from './modules/6/profile/ProfileService';
export * as profileMenuGrpcService from './modules/6/profile_menu/ProfileMenuService';
export * as userProfileGrpcService from './modules/6/user_profile/UserProfileService';